src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>General Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prospecting</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BDR_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The BDR responsible for converting the Lead</description>
        <label>BDR Source</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buzz_words__c</fullName>
        <inlineHelpText>List of common words or terms used in this industry.</inlineHelpText>
        <label>Buzz words</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_wide_Initiatives__c</fullName>
        <inlineHelpText>Describe any initiatives that this training may address.</inlineHelpText>
        <label>Company-wide Initiatives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Issues__c</fullName>
        <inlineHelpText>What are the organizational issues prompting this event?</inlineHelpText>
        <label>Current Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_for_Lead_Owner_s_Manager__c</fullName>
        <label>Email for Lead Owner&apos;s Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <description>Phone Extension</description>
        <label>Ext</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Call_Date_Time__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Last_List_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last List ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_List_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Exit_Reason__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Exit Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Step_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Playbook_Step_Type__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Playbook Step Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Voice_Message_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Voice Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Last_Voice_Message_Name__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Last Voice Message Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Playbook_Step_ID__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Playbook Step ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Total_Calls__c</fullName>
        <description>FrontSpin Field</description>
        <inlineHelpText>FrontSpin Field</inlineHelpText>
        <label>FS Total Calls</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_as_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag as Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Development__c</fullName>
        <inlineHelpText>What are the company&apos;s future training and staff development plans?</inlineHelpText>
        <label>Future Development</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_Training_Start_Date__c</fullName>
        <label>Ideal Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Quota__c</fullName>
        <inlineHelpText>Auto-filled from the user&apos;s record on Lead Conversion</inlineHelpText>
        <label>Lead Gen Quota</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandatory_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migrate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Migrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_important_content__c</fullName>
        <inlineHelpText>What sections of content are not important or relevant to this group?</inlineHelpText>
        <label>Not important content</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_training_staff_development__c</fullName>
        <inlineHelpText>What training or staff development has this group had in the past two years?</inlineHelpText>
        <label>Other training/staff development?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Power of One</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referring_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Shipping__c</fullName>
        <inlineHelpText>Special instructions for shipping workbooks</inlineHelpText>
        <label>Special Shipping?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tailoring_to_needs__c</fullName>
        <inlineHelpText>How can we most effectively tailor this program to fit your needs?</inlineHelpText>
        <label>Tailoring to needs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title_s_of_training_program__c</fullName>
        <label>Title(s) of training program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Topic_selection_criteria__c</fullName>
        <inlineHelpText>Why was this topic selected for your group?</inlineHelpText>
        <label>Topic selection criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Priorities__c</fullName>
        <inlineHelpText>The three most important things you want this group to improve on or do differently as a result of this training:</inlineHelpText>
        <label>Training Priorities</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CONVERTED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>aclaa,knels,cdeve</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ZoomInfo_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified,Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>ZoomInfo.com</value>
        </filters>
        <label>ZoomInfo Leads</label>
    </listViews>
    <recordTypes>
        <fullName>BDR_Leads</fullName>
        <active>true</active>
        <businessProcess>General Leads</businessProcess>
        <description>Leads from BDRs and other sources</description>
        <label>BDR Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care</fullName>
        <active>true</active>
        <businessProcess>General Leads</businessProcess>
        <description>Leads from Customer Care</description>
        <label>Customer Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internet_Web</fullName>
        <active>true</active>
        <businessProcess>General Leads</businessProcess>
        <description>Leads from web site</description>
        <label>Internet/Web</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospecting</fullName>
        <active>true</active>
        <businessProcess>Prospecting</businessProcess>
        <description>Leads from AMs prospecting efforts</description>
        <label>Prospecting</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Restrict_Changing_Ownership</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISPICKVAL( Owner:User.User_Team__c, &quot;BDRs&quot; ),
ISPICKVAL( Owner:User.User_Team__c, &quot;POOL&quot; ),
ISPICKVAL( Owner:User.User_Team__c, &quot;Former&quot; ) 
)
&amp;&amp;
ISCHANGED(OwnerId)
&amp;&amp;
AND(
NOT($Profile.Name = &apos;Sales Rep&apos;),
NOT($Profile.Name = &apos;BDR&apos;),
NOT($Profile.Name = &apos;Sales Managers&apos;),
NOT($Profile.Name = &apos;Operations&apos;),
NOT($Profile.Name = &apos;System Administrator&apos;)
)</errorConditionFormula>
        <errorMessage>The Ownership may not be changed due to Pool Rules.</errorMessage>
    </validationRules>
</CustomObject>